일부오류 수정

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/building-columns-solid.png" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Todo</title>
   </head>
   <body>
     <div id="wrap">
@@ -21,7 +22,9 @@
           </form>
         </div>
         <div class="Todo-list-box">
-          <div class="Todo-list"></div>
+          <div class="Todo-list">
+            <ul></ul>
+          </div>
         </div>
         <div class="Todo-submit-box">
           <span class="Todo-submit-btn"
